fix labels align regression

--- a/Source/Blazorise.AntDesign/Styles/components/_form.scss
+++ b/Source/Blazorise.AntDesign/Styles/components/_form.scss
@@ -32,9 +32,6 @@
     }
 
     > .ant-col.ant-form-item-label > label {
-        display: block;
-        width: 100%;
-        height: auto;
         white-space: normal;
         overflow-wrap: anywhere;
     }
