--- a/Source/Blazorise.AntDesign/wwwroot/blazorise.antdesign.css
+++ b/Source/Blazorise.AntDesign/wwwroot/blazorise.antdesign.css
@@ -4049,9 +4049,6 @@ template {
   white-space: initial;
 }
 .ant-form-item > .ant-col.ant-form-item-label > label {
-  display: block;
-  width: 100%;
-  height: auto;
   white-space: normal;
   overflow-wrap: anywhere;
 }
